--- a/.github/workflows/gen_api.yml
+++ b/.github/workflows/gen_api.yml
@@ -25,4 +25,6 @@ jobs:
       run: python tools/gen_api.py
 
     - uses: stefanzweifel/git-auto-commit-action@v5
-    
+      with:
+        commit_message: "Generate API"
+
